--- a/reviews.html
+++ b/reviews.html
@@ -96,7 +96,7 @@
                       </div>
                     </li>
                   </ul>
-                  <a class="button button-md button-default-outline-2 button-ujarak" href="mailto:info@africanconnections-usa.com">Request A Quote</a>
+                  <a class="button button-md button-default-outline-2 button-ujarak" href="customize.html">Customize A Tour</a>                                  
                 </div>
               </div>
             </div>
@@ -139,25 +139,12 @@
         <div class="container">
           <h3 class="oh-desktop" style="font-size: 30px;"><span class="d-inline-block wow slideInDown">Customer Testimonials</span></h3><br>
 
-          <div class="col-sm-6 col-md-12 wow fadeInRight">
-            <!-- Product Big-->
-
-                  <div class="container">
-                    <video controls crossorigin playsinline style="width: 100%;" poster="img/try1.png">
+                    <video controls crossorigin playsinline style="width: 100%; min-width: 100%" poster="img/try1.png">
                        <source src="videos/review1.mp4" type="video/mp4" size="576" seek>
                   
                         <!-- Caption files -->
                         <!-- Fallback for browsers that don't support the <video> element -->
                     </video>
-                  </div>
-                  <!--
-                  <video style="width: 100%" controls>
-                    <source src="videos/review1.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                  </video>
-                -->
-          </div>
-
           <div class="row row-sm row-40 row-md-50">
             <div class="col-sm-12 col-md-12  col-lg-12 wow fadeInRight">
               <!-- Reviews -->
@@ -209,21 +196,12 @@
               <div class="col-sm-6 col-md-12 col-lg-3 col-xl-4">
                 <div class="oh-desktop">
                   <div class="wow slideInRight" data-wow-delay="0s">
-                    <h6 class="text-spacing-100 text-uppercase">Contact</h6>
+                    <h6 class="text-spacing-100 text-uppercase">You Can Trust Us</h6>
                     <ul class="footer-contacts d-inline-block d-sm-block">
                       <li>
                         <div class="unit">
-                          <div class="unit-left"><span class="icon fa fa-phone"></span></div>
                           <div class="unit-body">
-                            <a class="link-phone" href="tel:+18478939304"> +1 (847) 893-9304</a>
-                          </div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="unit">
-                          <div class="unit-left"><span class="icon fa fa-envelope"></span></div>
-                          <div class="unit-body">
-                            <a class="link-aemail" href="mailto:info@africanconnections-usa.com">info@africanconnections-usa.com</a>
+                            <a href="https://www.bbb.org/us/il/bartlett/profile/tour-operators/african-connections-north-america-inc-0654-1000098865"><img src="img/general/bbb/bbb.png"/></a>
                           </div>
                         </div>
                       </li>
@@ -249,8 +227,25 @@
               <div class="col-sm-6 col-md-12 col-lg-3 col-xl-4">
                 <div class="oh-desktop">
                   <div class="wow slideInRight" data-wow-delay="0s">
-                    <h6 class="text-spacing-100 text-uppercase">Social</h6>
+                    <h6 class="text-spacing-100 text-uppercase">Contact</h6>
                     <ul class="footer-contacts d-inline-block d-sm-block">
+                      <li>
+                        <div class="unit">
+                          <div class="unit-left"><span class="icon fa fa-phone"></span></div>
+                          <div class="unit-body">
+                            <a class="link-phone" href="tel:+18478939304"> +1 (847) 893-9304</a>
+                          </div>
+                        </div>
+                      </li>
+                      <li>
+                        <div class="unit">
+                          <div class="unit-left"><span class="icon fa fa-envelope"></span></div>
+                          <div class="unit-body">
+                            <a class="link-aemail" href="mailto:info@africanconnections-usa.com?subject=Tour Enquiry&body=Hi,I would like to know more about....">info@africanconnections-usa.com</a>
+                          </div>
+                        </div>
+                      </li>
+
                       <li>
                         <div class="unit">
                           <div class="unit-left"><span class="icon fa fa-facebook"></span></div>
@@ -311,7 +306,7 @@
                 <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>African Connections North America.</span>. All Rights Reserved.</p>
               </div>
               <div class="col-sm-6 col-md-4 text-md-right">
-                <p class="rights"><a href="https://www.africanconnections.biz/new/travel/_1terms.php" target="_blank">Terms & Conditions</a></p>
+                <p class="rights"><a href="https://www.africanconnections.biz/archive/new/travel/_1terms.php" target="_blank">Terms & Conditions</a></p>
               </div>
             </div>
           </div>
