--- a/travelinsurance.html
+++ b/travelinsurance.html
@@ -94,7 +94,7 @@
                       </div>
                     </li>
                   </ul>
-                  <a class="button button-md button-default-outline-2 button-ujarak" href="mailto:info@africanconnections-usa.com">Request A Quote</a>
+                  <a class="button button-md button-default-outline-2 button-ujarak" href="customize.html">Customize A Tour</a>                                  
                 </div>
               </div>
             </div>
@@ -171,21 +171,12 @@
               <div class="col-sm-6 col-md-12 col-lg-3 col-xl-4">
                 <div class="oh-desktop">
                   <div class="wow slideInRight" data-wow-delay="0s">
-                    <h6 class="text-spacing-100 text-uppercase">Contact</h6>
+                    <h6 class="text-spacing-100 text-uppercase">You Can Trust Us</h6>
                     <ul class="footer-contacts d-inline-block d-sm-block">
                       <li>
                         <div class="unit">
-                          <div class="unit-left"><span class="icon fa fa-phone"></span></div>
                           <div class="unit-body">
-                            <a class="link-phone" href="tel:+18478939304"> +1 (847) 893-9304</a>
-                          </div>
-                        </div>
-                      </li>
-                      <li>
-                        <div class="unit">
-                          <div class="unit-left"><span class="icon fa fa-envelope"></span></div>
-                          <div class="unit-body">
-                            <a class="link-aemail" href="mailto:info@africanconnections-usa.com">info@africanconnections-usa.com</a>
+                            <a href="https://www.bbb.org/us/il/bartlett/profile/tour-operators/african-connections-north-america-inc-0654-1000098865"><img src="img/general/bbb/bbb.png"/></a>
                           </div>
                         </div>
                       </li>
@@ -211,8 +202,24 @@
               <div class="col-sm-6 col-md-12 col-lg-3 col-xl-4">
                 <div class="oh-desktop">
                   <div class="wow slideInRight" data-wow-delay="0s">
-                    <h6 class="text-spacing-100 text-uppercase">Social</h6>
+                    <h6 class="text-spacing-100 text-uppercase">Contact</h6>
                     <ul class="footer-contacts d-inline-block d-sm-block">
+                      <li>
+                        <div class="unit">
+                          <div class="unit-left"><span class="icon fa fa-phone"></span></div>
+                          <div class="unit-body">
+                            <a class="link-phone" href="tel:+18478939304"> +1 (847) 893-9304</a>
+                          </div>
+                        </div>
+                      </li>
+                      <li>
+                        <div class="unit">
+                          <div class="unit-left"><span class="icon fa fa-envelope"></span></div>
+                          <div class="unit-body">
+                            <a class="link-aemail" href="mailto:info@africanconnections-usa.com?subject=Tour Enquiry&body=Hi,I would like to know more about....">info@africanconnections-usa.com</a>
+                          </div>
+                        </div>
+                      </li>
                       <li>
                         <div class="unit">
                           <div class="unit-left"><span class="icon fa fa-facebook"></span></div>
@@ -273,7 +280,7 @@
                 <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>African Connections North America.</span>. All Rights Reserved.</p>
               </div>
               <div class="col-sm-6 col-md-4 text-md-right">
-                <p class="rights"><a href="https://www.africanconnections.biz/new/travel/_1terms.php" target="_blank">Terms & Conditions</a></p>
+                <p class="rights"><a href="https://www.africanconnections.biz/archive/new/travel/_1terms.php" target="_blank">Terms & Conditions</a></p>
               </div>
             </div>
           </div>
