Added firstname field to newsletter and updated server side

--- a/tours.html
+++ b/tours.html
@@ -14,6 +14,15 @@
           'currency': 'USD'
       });
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TP9NBVZQRL"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-TP9NBVZQRL');
+    </script>
     <!-- End Google Tag Manager -->
 
     <title>Tours</title>
@@ -205,9 +214,9 @@
                   <div class="unit-left"><a class="product-big-figure" href="#"><img src="img/tours/ghana_togo_benin.jpg" alt="" width="600" height="366"/></a></div>
                   <div class="unit-body">
                     <div class="product-big-body">
-                      <h5 class="product-big-title"><a href="brochures/ghana_togo_benin.pdf">Ghana, Togo, Benin Ouidah Voodoo Festival Tour</a></h5>
+                      <h5 class="product-big-title"><a href="ghana_togo_benin.html">Ghana, Togo, Benin Ouidah Voodoo Festival Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
-                        <div class="product-big-rating"><a class="product-big-reviews" href="brochures/ghana_togo_benin.pdf"><strong>Janaury 4th - 17th 2025 <br>14 Days</strong></a></div>
+                        <div class="product-big-rating"><a class="product-big-reviews" href="ghana_togo_benin.html"><strong>Janaury 1st - 15th 2025 <br>15 Days</strong></a></div>
                       </div>
                       <p class="product-big-text">
                       </p>
@@ -216,7 +225,7 @@
                       <!--<a class="button button-secondary-outline button-pipaluk" href="#" target="_blank">Read More</a>-->
 
                       <div class="product-big-price-wrap"><span class="product-big-price">$4,199</span></div>
-                      <a class="button button-secondary-outline button-pipaluk" href="brochures/ghana_togo_benin.pdf" target="_blank">Download Brochure</a>
+                      <a class="button button-secondary-outline button-pipaluk" href="ghana_togo_benin.html" target="_blank">Read More</a>
                     </div>
                   </div>
                 </div>
