--- a/contact-us.html
+++ b/contact-us.html
@@ -14,6 +14,15 @@
           'currency': 'USD'
       });
     </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TP9NBVZQRL"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-TP9NBVZQRL');
+    </script>
     <!-- End Google Tag Manager -->
 
     <title>Contact Us</title>
