--- a/index.html
+++ b/index.html
@@ -39,6 +39,15 @@
 
     </script>
     <!-- End Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-TP9NBVZQRL"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-TP9NBVZQRL');
+</script>
 
   <title>African Connections</title>
     <meta name="format-detection" content="telephone=no">
@@ -91,6 +100,9 @@
               <br>
               <div class="form-group" style="display:none;">
                 <input type="text" name="wtf" id="wtf">
+              </div>
+              <div class="form-group">
+                <input type="text" name="fullname_filled" id="fullname_filled" class="form-control" placeholder="First Name">
               </div>
               <div class="form-group">
                 <input type="email" name="joineremail" id="joineremail" class="form-control" placeholder="Email">
@@ -208,24 +220,6 @@
       </header>
       <!-- Swiper-->
       <section class="section swiper-container swiper-slider swiper-slider-corporate swiper-pagination-style-2" data-loop="true" data-autoplay="5000" data-simulate-touch="true" data-nav="false" data-direction="vertical">
-        <div class="swiper-wrapper text-left">
-          <a href="returntomotherland.html">
-            <div class="swiper-slide context-dark" data-slide-bg="img/home/christmaspromotion.jpg">
-              <a href="returntomotherland.html">
-                <div class="swiper-slide-caption section-md">
-                  <div class="container">
-                    <div class="row">
-                      <div class="col-md-10" style="align-content: right; text-align: right;">
-                        <!--<h6 class="text-uppercase" data-caption-animate="fadeInRight" data-caption-delay="0">The Black Star Of Africa</h6>-->
-                        <!--<h2 class="oh font-weight-light" data-caption-animate="slideInUp" data-caption-delay="100"><span>Visit</span><span class="font-weight-bold"> Ghana</span></h2>-->
-                        <a class="button button-default-outline button-ujarak" href="returntomotherland.html" data-caption-animate="fadeInLeft" data-caption-delay="0">Book This Tour</a>
-                      </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </a>
-          </div>
           <div class="swiper-slide context-dark" data-slide-bg="img/home/sliderghana.jpg">
             <div class="swiper-slide-caption section-md">
               <div class="container">
