--- a/panafest.html
+++ b/panafest.html
@@ -15,7 +15,16 @@
           'currency': 'USD'
       });
     </script>
-  <!-- End Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TP9NBVZQRL"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-TP9NBVZQRL');
+    </script>
+    <!-- End Google Tag Manager -->
 
     <title>PANAFEST, African Heritage Tour</title>
     <meta name="format-detection" content="telephone=no">
