--- a/returntomotherland.html
+++ b/returntomotherland.html
@@ -14,7 +14,16 @@
           'currency': 'USD'
       });
     </script>
-  <!-- End Google Tag Manager -->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TP9NBVZQRL"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-TP9NBVZQRL');
+    </script>
+    <!-- End Google Tag Manager -->
 
   <title>Return To The Motherland</title>
     <meta name="format-detection" content="telephone=no">
