--- a/panafest.html
+++ b/panafest.html
@@ -106,7 +106,7 @@
                     <li>
                       <div class="unit unit-spacing-xs">
                         <div class="unit-left"><span class="icon fa fa-phone"></span></div>
-                        <div class="unit-body"><a class="link-phone" href="tel:+18478939304">+1 (847) 893-9304</a></div>
+                        <div class="unit-body"><a class="link-phone" href="tel:+18479563319">+1 (847) 956-3319</a></div>
                       </div>
                     </li>
                   </ul>
@@ -297,7 +297,7 @@
                           </div>
                     </div>
                     
-                    <div class="group-md group-middle" style="float: right;">
+                    <div class="group-md group-middle" style="float: left;">
                       <a class="button button-secondary button-pipaluk" href="https://square.link/u/T758e8mM">Book Tour</a>
                       <a class="button button-warning  button-pipaluk" href="mailto:yourfriendsemail@example.com?subject=You Might Like This Tour&body=Hi,I found this tour and thought you might like it https://www.africanconnections-usa.com/panafest.html">Send To A Friend <span class="icon fa fa-share-alt fa-5x" style="margin: 0px;"></span></a>
                       <a class="button button-warning  button-pipaluk" style="color: #01b3a7;"  href="/brochures/panafest_2023.pdf">Open And Print Brochure <span class="icon fa fa-print fa-5x" style="margin: 0px;"></span></a>
@@ -402,8 +402,8 @@
                     <ul class="footer-contacts d-inline-block d-sm-block">
                         <div class="unit">
                           <div class="unit-left"><span class="icon fa fa-location-arrow"></span></div>
-                          <div class="unit-body"><a class="link-location" href="#">160 Bartlett Plaza Number 8428
-                            <br>Bartlett, Illinois 60103</a></div>
+                          <div class="unit-body"><a class="link-location" href="#">1600 Golf Road, Suite 1200
+                            <br>Rolling Meadows, Illinois 60008</a></div>
                         </div>
                       </li>
                     </ul>
@@ -419,7 +419,7 @@
                         <div class="unit">
                           <div class="unit-left"><span class="icon fa fa-phone"></span></div>
                           <div class="unit-body">
-                            <a class="link-phone" href="tel:+18478939304"> +1 (847) 893-9304</a>
+                            <a class="link-phone" href="tel:+18479563319"> +1 (847) 956-3319</a>
                           </div>
                         </div>
                       </li>
@@ -488,10 +488,10 @@
               </div>
               <div class="col-sm-6 col-md-4 order-sm-first">
                 <!-- Rights-->
-                <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>African Connections North America.</span>. All Rights Reserved.</p>
+                <p class="rights" style="color: white;"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>African Connections North America.</span>. All Rights Reserved.</p>
               </div>
               <div class="col-sm-6 col-md-4 text-md-right">
-                <p class="rights"><a href="https://www.africanconnections.biz/archive/new/travel/_1terms.php" target="_blank">Terms & Conditions</a></p>
+                <p class="rights" style="color: white;"><a href="https://www.africanconnections.biz/archive/new/travel/_1terms.php" target="_blank">Terms & Conditions</a></p>
               </div>
             </div>
           </div>
