--- a/ghana-home.html
+++ b/ghana-home.html
@@ -99,7 +99,7 @@
                     <li>
                       <div class="unit unit-spacing-xs">
                         <div class="unit-left"><span class="icon fa fa-phone"></span></div>
-                        <div class="unit-body"><a class="link-phone" href="tel:+18478939304">+1 (847) 893-9304</a></div>
+                        <div class="unit-body"><a class="link-phone" href="tel:+18479563319">+1 (847) 956-3319</a></div>
                       </div>
                     </li>
                   </ul>
@@ -209,6 +209,7 @@
                         <div class="product-big-rating"><a class="product-big-reviews" href="brochures/ghana_togo_benin.pdf"><strong>Janaury 4th - 17th 2025 <br>14 Days</strong></a></div>
                       </div>
                       <p class="product-big-text">
+                        Benin is considered by many to be the birthplace of voodoo. Every year, on the 10 th of January, the Ouidah region celebrates the Voodoo Festival, an important event dedicated to this religion. On this occasion, ceremonies, sacrifices, songs, dances, and large banquets are held; and faith, magic and the supernatural are revealed through complex rituals and spectacular performances. 
                       </p>
                       
                       <a class="button button-black-outline button-ujarak" href="https://square.link/u/T758e8mM">Buy This Tour</a>
@@ -311,8 +312,8 @@
                     <ul class="footer-contacts d-inline-block d-sm-block">
                         <div class="unit">
                           <div class="unit-left"><span class="icon fa fa-location-arrow"></span></div>
-                          <div class="unit-body"><a class="link-location" href="#">160 Bartlett Plaza Number 8428
-                            <br>Bartlett, Illinois 60103</a></div>
+                          <div class="unit-body"><a class="link-location" href="#">1600 Golf Road, Suite 1200
+                            <br>Rolling Meadows, Illinois 60008</a></div>
                         </div>
                       </li>
                     </ul>
@@ -328,7 +329,7 @@
                         <div class="unit">
                           <div class="unit-left"><span class="icon fa fa-phone"></span></div>
                           <div class="unit-body">
-                            <a class="link-phone" href="tel:+18478939304"> +1 (847) 893-9304</a>
+                            <a class="link-phone" href="tel:+18479563319"> +1 (847) 956-3319</a>
                           </div>
                         </div>
                       </li>
@@ -397,10 +398,10 @@
               </div>
               <div class="col-sm-6 col-md-4 order-sm-first">
                 <!-- Rights-->
-                <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>African Connections North America.</span>. All Rights Reserved.</p>
+                <p class="rights" style="color: white;"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>African Connections North America.</span>. All Rights Reserved.</p>
               </div>
               <div class="col-sm-6 col-md-4 text-md-right">
-                <p class="rights"><a href="https://www.africanconnections.biz/archive/new/travel/_1terms.php" target="_blank">Terms & Conditions</a></p>
+                <p class="rights" style="color: white;"><a href="https://www.africanconnections.biz/archive/new/travel/_1terms.php" target="_blank">Terms & Conditions</a></p>
               </div>
             </div>
           </div>
