--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       });
       
       gtag('config', 'AW-11128211156/RXcyCKPq_NUYENSNrLop', {
-        'phone_conversion_number': '+1 (847) 893-9304'
+        'phone_conversion_number': '+1 (847) 956-3319'
       });
 
       return false;
@@ -162,7 +162,7 @@
                     <li>
                       <div class="unit unit-spacing-xs">
                         <div class="unit-left"><span class="icon fa fa-phone"></span></div>
-                        <div class="unit-body"><a class="link-phone" href="tel:+18478939304">+1 (847) 893-9304</a></div>
+                        <div class="unit-body"><a class="link-phone" href="tel:+18479563319">+1 (847) 956-3319</a></div>
                       </div>
                     </li>
                   </ul>
@@ -265,7 +265,8 @@
           <div class="box-categories cta-box-wrap">
             <div class="box-categories-content">
               <div class="row justify-content-center">
-                <div class="col-md-4 wow fadeInDown col-9" data-wow-delay=".2s">
+
+                <div class="col-md-3 wow fadeInDown col-9" data-wow-delay=".2s">
                   <ul class="list-marked-2 box-categories-list">
                     <li>
                       <a href="ghana-home.html">
@@ -275,7 +276,8 @@
                     </li>
                   </ul>
                 </div>
-                <div class="col-md-4 wow fadeInDown col-9" data-wow-delay=".2s">
+
+                <div class="col-md-3 wow fadeInDown col-9" data-wow-delay=".2s">
                   <ul class="list-marked-2 box-categories-list">
                     <li>
                       <a href="egypt.html">
@@ -285,7 +287,8 @@
                     </li>
                   </ul>
                 </div>
-                <div class="col-md-4 wow fadeInDown col-9" data-wow-delay=".2s">
+
+                <div class="col-md-3 wow fadeInDown col-9" data-wow-delay=".2s">
                   <ul class="list-marked-2 box-categories-list">
                     <li>
                       <a href="senegal.html">
@@ -295,6 +298,18 @@
                     </li>
                   </ul>
                 </div>
+
+                <div class="col-md-3 wow fadeInDown col-9" data-wow-delay=".2s">
+                  <ul class="list-marked-2 box-categories-list">
+                    <li>
+                      <a href="ghana_togo_benin.html">
+                        <img src="img/home/4overlayonslider_benin.jpg" alt="" width="368" height="420"/>
+                      <h5 class="box-categories-title">Benin</h5>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+
               </div>
             </div>
           </div><a class="link-classic wow fadeInUp" href="tours.html">View Tours<span></span></a>
@@ -341,7 +356,7 @@
                   <div class="unit-left"><a class="product-big-figure" href="returntomotherland.html"><img src="img/home/2hottours.jpg" alt="" width="600" height="366"/></a></div>
                   <div class="unit-body">
                     <div class="product-big-body">
-                      <h5 class="product-big-title"><a href="returntomotherland.html">Return to the Motherland, African Festival Tour</a></h5>
+                      <h5 class="product-big-title"><a href="returntomotherland.html">Return to the Motherland,<br>  African Festival Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
                         <div class="product-big-rating"><a class="product-big-reviews" href="returntomotherland.html"><strong>June 18th - June 29th 2024 || October 22nd - November 1st 2024<br>12 Days</strong></a></div>
                       </div>
@@ -468,8 +483,8 @@
                     <ul class="footer-contacts d-inline-block d-sm-block">
                         <div class="unit">
                           <div class="unit-left"><span class="icon fa fa-location-arrow"></span></div>
-                          <div class="unit-body"><a class="link-location" href="#">160 Bartlett Plaza Number 8428
-                            <br>Bartlett, Illinois 60103</a></div>
+                          <div class="unit-body"><a class="link-location" href="#">1600 Golf Road, Suite 1200
+                            <br>Rolling Meadows, Illinois 60008</a></div>
                         </div>
                       </li>
                     </ul>
@@ -485,7 +500,7 @@
                         <div class="unit">
                           <div class="unit-left"><span class="icon fa fa-phone"></span></div>
                           <div class="unit-body">
-                            <a class="link-phone" href="tel:+18478939304"> +1 (847) 893-9304</a>
+                            <a class="link-phone" href="tel:+18479563319"> +1 (847) 956-3319</a>
                           </div>
                         </div>
                       </li>
@@ -554,10 +569,10 @@
               </div>
               <div class="col-sm-6 col-md-4 order-sm-first">
                 <!-- Rights-->
-                <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>African Connections North America.</span>. All Rights Reserved.</p>
+                <p class="rights" style="color: white;"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>African Connections North America.</span>. All Rights Reserved.</p>
               </div>
               <div class="col-sm-6 col-md-4 text-md-right">
-                <p class="rights"><a href="https://www.africanconnections.biz/archive/new/travel/_1terms.php" target="_blank">Terms & Conditions</a></p>
+                <p class="rights" style="color: white;"><a href="https://www.africanconnections.biz/archive/new/travel/_1terms.php" target="_blank">Terms & Conditions</a></p>
               </div>
             </div>
           </div>
@@ -577,7 +592,7 @@
             return false;
         } else {
             //alert("validated");
-        if($('#joineremail').val().trim() != ""){
+        if($('#fullname_filled').val().trim() != "" && $('#joineremail').val().trim() != ""){
 		      document.getElementById('popupclosebtn').click('popupclosebtn');
           localStorage.setItem("popupclosed", "yes");
           $("#popupform").submit();
