--- a/tours.html
+++ b/tours.html
@@ -100,7 +100,7 @@
                     <li>
                       <div class="unit unit-spacing-xs">
                         <div class="unit-left"><span class="icon fa fa-phone"></span></div>
-                        <div class="unit-body"><a class="link-phone" href="tel:+18478939304">+1 (847) 893-9304</a></div>
+                        <div class="unit-body"><a class="link-phone" href="tel:+18479563319">+1 (847) 956-3319</a></div>
                       </div>
                     </li>
                   </ul>
@@ -165,7 +165,7 @@
                       <h5 class="product-big-title"><a href="returntomotherland.html">Return to the Motherland,<br> African Festival Tour</a></h5>
                       <div class="group-sm group-middle justify-content-start">
                         <div class="product-big-rating"><a class="product-big-reviews" href="returntomotherland.html">
-                          <strong>June 18th - June 29th 2024 || October 22nd - November 1st 2024<br>12 Days</strong></a></div>
+                          <strong>June 18th - June 29th 2024 || October 22nd - November 1st 2024 (12 Days)</strong></a></div>
                       </div>
                       <p class="product-big-text">
                         Ghana has many exciting traditional festivals and our African Festival Tour gives you the opportunity to experience one of Ghana’s most exciting events.
@@ -219,6 +219,7 @@
                         <div class="product-big-rating"><a class="product-big-reviews" href="ghana_togo_benin.html"><strong>Janaury 1st - 15th 2025 <br>15 Days</strong></a></div>
                       </div>
                       <p class="product-big-text">
+                        Benin is considered by many to be the birthplace of voodoo. Every year, on the 10 th of January, the Ouidah region celebrates the Voodoo Festival, an important event dedicated to this religion. On this occasion, ceremonies, sacrifices, songs, dances, and large banquets are held; and faith, magic and the supernatural are revealed through complex rituals and spectacular performances. 
                       </p>
                       
                       <a class="button button-black-outline button-ujarak" href="https://square.link/u/T758e8mM">Buy This Tour</a>
@@ -344,8 +345,8 @@
                     <ul class="footer-contacts d-inline-block d-sm-block">
                         <div class="unit">
                           <div class="unit-left"><span class="icon fa fa-location-arrow"></span></div>
-                          <div class="unit-body"><a class="link-location" href="#">160 Bartlett Plaza Number 8428
-                            <br>Bartlett, Illinois 60103</a></div>
+                          <div class="unit-body"><a class="link-location" href="#">1600 Golf Road, Suite 1200
+                            <br>Rolling Meadows, Illinois 60008</a></div>
                         </div>
                       </li>
                     </ul>
@@ -361,7 +362,7 @@
                         <div class="unit">
                           <div class="unit-left"><span class="icon fa fa-phone"></span></div>
                           <div class="unit-body">
-                            <a class="link-phone" href="tel:+18478939304"> +1 (847) 893-9304</a>
+                            <a class="link-phone" href="tel:+18479563319"> +1 (847) 956-3319</a>
                           </div>
                         </div>
                       </li>
@@ -431,10 +432,10 @@
               </div>
               <div class="col-sm-6 col-md-4 order-sm-first">
                 <!-- Rights-->
-                <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>African Connections North America.</span>. All Rights Reserved.</p>
+                <p class="rights" style="color: white;"><span>&copy;&nbsp;</span><span class="copyright-year"></span><span>&nbsp;</span><span>African Connections North America.</span>. All Rights Reserved.</p>
               </div>
               <div class="col-sm-6 col-md-4 text-md-right">
-                <p class="rights"><a href="https://www.africanconnections.biz/archive/new/travel/_1terms.php" target="_blank">Terms & Conditions</a></p>
+                <p class="rights" style="color: white;"><a href="https://www.africanconnections.biz/archive/new/travel/_1terms.php" target="_blank">Terms & Conditions</a></p>
               </div>
             </div>
           </div>
